--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -235,6 +235,7 @@ body {
 }
 
 
+
 .doc-bg {
     background-image: url("../images/doc-bg.png");
     width: 100vw;
@@ -242,15 +243,19 @@ body {
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
+    margin-top: -250px;
+}
+
+.doc {
+    margin-top: -1100px;
 }
 
 .doc .card-answer {
+    margin-top: 100px;
     background-color: #6D62CA;
     padding: 50px 30px 50px 30px;
     border-radius: 30px;
-    margin-top: -500px;
     margin-bottom: 250px;
-
 }
 
 .doc .card-answer h3 {
@@ -320,6 +325,96 @@ body {
     border-radius: 100%;
     background: #FF9B52;
 }
+
+.doc .card-blog .card-info-text {
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0px 9px 31px rgba(255, 255, 255, 0.58);
+    background-color: #FFFFFF;
+}
+
+.doc .card-blog .card-info-text h4 {
+    font-family: Nunito;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 24px;
+    line-height: 33px;
+    color: #428EFE;
+}
+
+.doc .card-blog .card-info-text h2 {
+    font-family: Nunito;
+    font-style: normal;
+    font-weight: 900;
+    font-size: 36px;
+    line-height: 49px;
+    color: #FF9348;
+}
+
+.doc .card-blog .card-info-text p {
+    font-family: Nunito;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 14px;
+    line-height: 19px;
+    color: #456580;
+}
+
+.doc .card-blog .card-info {
+    position: relative;
+}
+
+.doc .card-blog .card-info img {
+    width: 100%;
+    height: 200px;
+    object-fit: cover;
+    border-radius: 10px;
+}
+
+.doc .card-blog .layer-ungu {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    cursor: pointer;
+    background-color: rgba(66, 102, 254, 0.51);
+    width: 100%;
+    height: 100%;
+    border-radius: 10px;
+    padding: 20px;
+}
+
+.doc .card-blog .layer {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    cursor: pointer;
+    background-color: rgb(0 0 0 / 42%);
+    width: 100%;
+    height: 100%;
+    border-radius: 10px;
+    padding: 20px;
+}
+
+.doc .card-blog .card-info h6 {
+    font-family: Nunito;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 18px;
+    line-height: 25px;
+    color: #FFFFFF;
+}
+
+.doc .card-blog .card-info span {
+    font-family: Nunito;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 19px;
+    color: #FFFFFF;
+}
+
 
 .footer {
     margin-bottom: 40px;
